tests/baselines/reference/typeSatisfaction_propertyValueConformance3.errors.txt
typeSatisfaction_propertyValueConformance3.ts(6,26): error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'Color'.


==== typeSatisfaction_propertyValueConformance3.ts (1 errors) ====
    export type Color = { r: number, g: number, b: number };
    
    // All of these should be Colors, but I only use some of them here.
    export const Palette = {
        white: { r: 255, g: 255, b: 255 },
        black: { r: 0, g: 0, d: 0 }, // <- oops! 'd' in place of 'b'
                             ~
!!! error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'Color'.
        blue: { r: 0, g: 0, b: 255 },
    } satisfies Record<string, Color>;
    